correccion error archivo js

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </section>
 
       <button class="download-but">
-        Descargar Meme
+        Descargar Meme 
         <i class="fas fa-download button-icon-text green-button-icon" aria-hidden="true"></i>
     </button>
 
@@ -68,7 +68,7 @@
      <!-- EDICION FONDO IMAGEN -->   
       <section id="img">
 
-        <div class="url-fondo"></div>
+        
           
         <h2 class="titulo-aside">IMAGEN</h2>
 
@@ -105,7 +105,7 @@
 
       <div class="opacidad">
         <label class="opacidad" for="opacidad">Opacidad</label>
-        <input type="range" id="brillo" value="1">
+        <input type="range" id="opacidad" value="1">
       </div>
 
       <div class="contraste">
@@ -248,6 +248,6 @@
     </aside>
   
   
-    <script src="./js/app.js"></script>
+    <script src="JS/app.js"></script>
   </body>
 </html>
