ajustes esteticos botones verdes

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
   <meta name="description" content="Generá tus propios memes y descargalos para usar en tus redes sociales">
   <meta name="keywords" content="meme, imagen, texto, editor, generador meme">
 
+  <meta property="og:title"content="Editor de Memes">
+  <meta property="og description" content="Editor de memes. Segundo proyecto para presentación del modulo 2 de la carrera de FrontEnd en Ada">
+  <meta property="og:type"content="article">
+  <meta property="og:site name" content="Editor de Memes">
+  <meta property="og:url" content="https://eugeniarinaldi.github.io/EditorDeMemes//">
+  <!-- <meta property="og:image" content=" falta imagen con previsualizacion"> -->
+
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css.css/style.css">
@@ -86,12 +93,12 @@
           
 
           <select id="estilos-back" class="estilos-back">
-            <option value="ninguno">Ninguno</option>
+            <option value="unset">Ninguno</option>
             <option value="aclarar">Aclarar</option>
             <option value="oacurecer">Oscurecer</option>
             <option value="diferencia">Diferencia</option>
-            <option value="luminosidad">Luminosidad</option>
-            <option value="multiplicar">Multiplicar</option>
+            <option value="luminosity">Luminosidad</option>
+            <option value="multiply">Multiplicar</option>
           </select>
           </div>
 
