--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta property="og:type"content="article">
   <meta property="og:site name" content="Editor de Memes">
   <meta property="og:url" content="https://eugeniarinaldi.github.io/EditorDeMemes//">
-  <!-- <meta property="og:image" content=" falta imagen con previsualizacion"> -->
+  <meta property="og:image" content="https://github.com/Eugeniarinaldi/EditorDeMemes/blob/master/img/editor.png?raw=true">
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Kalam&family=Montserrat&family=Open+Sans&family=Roboto+Mono&family=Ubuntu:wght@500&display=swap" rel="stylesheet">
